--- a/src/main/resources/templates/user/sign-up.html
+++ b/src/main/resources/templates/user/sign-up.html
@@ -1,18 +1,29 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org/">
-<!--<head th:replace="fragments :: head"></head>-->
-<body>
+<head th:replace="fragments :: head"></head>
+<body class="container">
 <h1 th:text="${title}">Default Title</h1>
-<!--<nav th:replace="fragments :: navigation"></nav>-->
+<nav th:replace="fragments :: navigation"></nav>
 
-<!--<form method="post" style="width:400px;" th:object="${LogInForm}">-->
-<!--<div class="form-group">-->
-    <!--<label th:for="username">Username</label>-->
-    <!--<input class="form-control" th:field="*{username}"/>-->
-    <!--<div class ="error" th:errors="*{username}"></div>-->
-    <!--</div>-->
+<form method="post" style="width:600px;" th:object="${signUpForm}">
+    <div class="form-group">
+    <label th:for="username">Username</label>
+    <input class="form-control" th:field="*{username}"/>
+    <div class ="error" th:errors="*{username}"></div>
+    </div>
+    <div class="form-group">
+        <label th:for="password">Password</label>
+        <input class="form-control" th:field="*{password}" type="password"/>
+        <div class="error" th:errors="*{password}"></div>
+    </div>
+    <div class="form-group">
+        <label th:for="verifyPassword">Re-Type Password</label>
+        <input class="form-control" th:field="*{verifyPassword}" type="password"/>
+        <div class="error" th:errors="*{password}"></div>
+    </div>
 
-<!--</form>-->
+    <input type="submit" value="Sign Up"/>
+</form>
 
 
 </body>
