--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -13,7 +13,7 @@
 
     <div th:if="${userId}">
         <nav class="user-nav">
-            <a href="/logout">Log Out</a>
+            <a href="/user/logout">Log Out</a>
         </nav>
 
         <nav>
