--- a/src/main/resources/templates/user/index.html
+++ b/src/main/resources/templates/user/index.html
@@ -4,6 +4,17 @@
 <body class="container">
 <h1 th:text="${title}">Default Title</h1>
 <nav th:replace="fragments :: navigation"></nav>
-<h1>Success!!</h1>
+
+<p th:unless="${pets} and ${pets.size()}"></p>
+<table class="table">
+    <tr>
+        <th>Name</th>
+        <th>Pet</th>
+    </tr>
+    <tr th:each="pet : ${pets}">
+        <td><a th:href="'/journal/view'+ ${pet.uid}" th:text="${pet.petName}"></a></td>
+        <td th:text="${pet.petType}"></td>
+    </tr>
+</table>
 </body>
 </html>
