--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -1,22 +1,26 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:replace="fragments :: head"></head>
-<body class="container">
-<!--<h1 ${title}>Default Title</h1>-->
-<form method="post" style="width:600px;" th:object="${logInForm}" class="horizontal">
+<body class="container" >
+<h1 th:text="${title}">Default Title</h1>
+<form method="post" style="width:600px;" th:object="${logInForm}">
     <div class="form-group">
-        <label th:for="username"></label>
-        <input class="form-control" th:field="*{username}" placeholder="Username"/>
-        <div class="error" th:errors="*{username}"></div>
+        <label th:for="username">username</label>
+        <input class="form-control" th:field="*{username}" />
+        <span class="error" th:errors="*{username}"></span>
     </div>
     <div class="form-group">
-        <label th:for="password"></label>
-        <input class="form-control" th:field="*{password}" type="password" placeholder="Password"/>
-        <div class="error" th:errors="*{password}"></div>
+        <label th:for="password">password</label>
+        <input class="form-control" th:field="*{password}" type="password" />
+        <span class="error" th:errors="*{password}"></span>
     </div>
     <div class="form-group">
     <input type="submit" value="Log In Now"/>
     </div>
 </form>
+<div class="container">
+    <a href="/sign-up" class="btn btn-default" >Join Now</a>
+</div>
+
 </body>
 </html>
