--- a/src/main/resources/templates/user/index.html
+++ b/src/main/resources/templates/user/index.html
@@ -12,7 +12,7 @@
         <th>Pet</th>
     </tr>
     <tr th:each="pet : ${pets}">
-        <td><a th:href="'/journal/view'+ ${pet.uid}" th:text="${pet.petName}"></a></td>
+        <td><a th:href="'/journal/'+ ${pet.uid}" th:text="${pet.petName}"></a></td>
         <td th:text="${pet.petType}"></td>
     </tr>
 </table>
