delete functional. redirect faulty

--- a/src/main/resources/templates/journal/view.html
+++ b/src/main/resources/templates/journal/view.html
@@ -20,5 +20,8 @@
 <div class="container">
     <a th:href="'/journal/add/'+${pet_uid}" class="btn btn-default" >Add an Entry</a>
 </div>
+
+<a th:href="'/journal/delete/'+${pet_uid}">Delete an Entry</a>
+
 </body>
 </html>
