--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -2,9 +2,9 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:replace="fragments :: head"></head>
 <body class="container" >
-<h1 th:text="${title}">Default Title</h1>
-<form method="post" style="width:600px;" th:object="${logInForm}">
-    <div class="form-group">
+<h1 th:text="${title}" >Default Title</h1>
+<form method="post" style="width:400px;" th:object="${logInForm}" class="login">
+    <div class="form-group" >
         <label th:for="username">username</label>
         <input class="form-control" th:field="*{username}" />
         <span class="error" th:errors="*{username}"></span>
