--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8"/>
     <title th:text="${title}">My Best Friend</title>
 
-    <link rel="stylesheet" th:href="@{/css/styles.css}" />
+    <link rel="stylesheet" th:href="@{/styles.css}" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
     <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body >
-<div th:fragment="navigation">
+<div th:fragment="navigation" class="container">
 
-    <nav th:if="${userId}">
+    <nav th:if="${userId}" class="button">
         <ul class="nav nav-pills pull-right" style="text-align:right" >
             <li><a href="/">My Pets</a></li>
             <li><a href="/pet/add">Add a Pet</a></li>
@@ -19,9 +19,9 @@
         </ul>
     </nav>
 
-    <div class="button" >
+    <nav th:if="!#{userId}" class="button" >
         <a href="/">Home</a>
-    </div>
+    </nav>
 
 </div>
 
