--- a/src/main/resources/templates/journal/upload.html
+++ b/src/main/resources/templates/journal/upload.html
@@ -5,11 +5,15 @@
 <h1 th:text="${title}">Default Title</h1>
 <nav th:replace="fragments :: navigation"></nav>
 
-<form method="post" enctype="multipart/form-data" action="/upload/">
+<form method="post" enctype="multipart/form-data" th:action="'/upload/'+${journal_uid}">
     <table>
-        <tr><td>Picture to upload:</td><td></td><td> <input type="file" name="file"/></td></tr>
-        <tr><td></td><td><input type="submit" value="Upload"/></td></tr>
+        <tr><td>Picture to upload:</td></tr>
+        <tr><td> <input type="file" name="file"/></td></tr>
+        <tr><td><input type="submit" value="Upload"/></td></tr>
+
     </table>
+    <div type="hidden" th:field="${journal_uid}"></div>
+
 </form>
 
 </body>
