--- a/src/main/resources/static/styles.css
+++ b/src/main/resources/static/styles.css
@@ -1,21 +1,23 @@
 body {
     font-family: actor;
-    background: url(images/background.jpg);
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
+}
+.container {
+    border:1px solid #000;
+    background-color:#FFF;
+    background-image: url('\my-best-friend\src\main\resources\static\images\background.jpg');
     background-repeat: no-repeat;
     background-attachment: fixed;
-}
+    height:400px;
+    width:600px;
+    margin-top: 100px;
+  }
 .login {
     position: absolute;
-    right: 5px;
+    left: 5px;
 }
 nav{
     margin-bottom: 30px;
 }
-
 .user-nav {
     float:right;
 }
@@ -29,4 +31,7 @@ nav{
   border-right: 1px solid #333333;
   border-bottom: 1px solid #333333;
   border-left: 1px solid #CCCCCC;
+}
+.form-control {
+  height:5px;
 }
