--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:replace="fragments :: head"></head>
-<body class="login">
+<body class="container login">
 <h1 th:text="${title}" >Default Title</h1>
 <form method="post" style="width:100px;" th:object="${logInForm}" >
     <div class="form-group" >
