--- a/src/main/resources/templates/journal/view.html
+++ b/src/main/resources/templates/journal/view.html
@@ -17,11 +17,11 @@
 
 </table>
 <div type="hidden" th:field="${pet_uid}"></div>
-<div class="container">
+<div >
     <a th:href="'/journal/add/'+${pet_uid}" class="btn btn-default" >Add an Entry</a>
 </div>
-
-<a th:href="'/journal/delete/'+${pet_uid}">Delete an Entry</a>
-
+<div >
+<a th:href="'/journal/delete/'+${pet_uid}" class="btn btn-default">Delete an Entry</a>
+</div>
 </body>
 </html>
