--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -13,9 +13,9 @@
 
     <nav th:if="${userId}">
         <ul class="nav nav-pills pull-right " style="text-align:right" >
-            <li><a href="/" class="btn btn-default">My Pets</a></li>
-            <li><a href="/pet/add" class="btn btn-default">Add a Pet</a></li>
-            <li><a href="/logout" class="btn btn-default">Log Out</a></li>
+            <li><a href="/" class="btn button">My Pets</a></li>
+            <li><a href="/pet/add" class="btn button">Add a Pet</a></li>
+            <li><a href="/logout" class="btn button">Log Out</a></li>
         </ul>
     </nav>
 
