--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -22,7 +22,7 @@
     </div>
 
 <div >
-    <a href="/sign-up" class="btn btn-default" >Join Now</a>
+    <a href="/sign-up" class=" btn-default" >Join Now</a>
 </div>
 </form>
 </body>
