--- a/src/main/resources/static/styles.css
+++ b/src/main/resources/static/styles.css
@@ -24,16 +24,14 @@ nav{
     float:right;
 }
 .button {
-  font: bold 11px Arial;
-  text-decoration: none;
-  background-color: pink;
-  color: #333333;
-  padding: 2px 6px 2px 6px;
-  border-top: 1px solid #CCCCCC;
-  border-right: 1px solid #333333;
-  border-bottom: 1px solid #333333;
-  border-left: 1px solid #CCCCCC;
-  width: 150px;
+  background-color: LightGrey; /* Green */
+      border: none;
+      color: black;
+      padding: 15px 32px;
+      text-align: center;
+      text-decoration: none;
+      display: inline-block;
+      font-size: 16px;
 }
 .form-control {
   height:5px;
